Add coverage command to package.json and .gitignore
This commit includes two new Jest configurations for Password Validation Testing with and without coverage reports. In addition to this, 'coverage' is added to .gitignore to ensure coverage reports don't get version controlled and a 'test:cov' command is added to package.json to easily run tests with coverage.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:cov": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "compile": "tsc"
   },
   "keywords": [],
