--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@password-validator/core",
-  "version": "1.0.0",
+  "version": "0.0.0-semantic-release",
   "description": "@password-validator/core is a JavaScript/TypeScript library that helps enforce strong password policies in applications, improving security by validating password features like length, character types, and consistency with best practices.",
   "type": "module",
   "main": "./dist/cjs/src/password/validator/main.js",
@@ -17,7 +17,8 @@
     "build:esm": "node package-root.updater.js type=module && tsc --project tsconfig.esm.json",
     "build:cjs": "node package-root.updater.js type=commonjs && tsc --project tsconfig.cjs.json",
     "lint": "eslint --fix src/**/*.ts",
-    "build:clean": "rimraf dist"
+    "build:clean": "rimraf dist",
+    "prepare": "husky install"
   },
   "keywords": [
     "password",
@@ -26,6 +27,10 @@
     "policy"
   ],
   "packageManager": "npm@10.2.4",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/",
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Theshedman/password-validator.js.git"
@@ -57,6 +62,8 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "18.4.3",
+    "@commitlint/config-conventional": "18.4.3",
     "@types/jest": "29.5.10",
     "@typescript-eslint/eslint-plugin": "6.12.0",
     "@typescript-eslint/parser": "6.12.0",
@@ -68,6 +75,7 @@
     "eslint-plugin-n": "16.3.1",
     "eslint-plugin-prettier": "5.0.1",
     "eslint-plugin-promise": "6.1.1",
+    "husky": "8.0.3",
     "jest": "29.7.0",
     "prettier": "3.1.0",
     "prettier-eslint": "16.1.2",
