fix(build): fix tsc build bug.

--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "outDir": "dist/esm",
+    "declarationDir": "dist/types",
     "moduleResolution": "Node",
     "module": "ESNext"
   }
