--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Theshedman/password-validator.js.git"
+    "url": "git+https://github.com/Theshedman/password-validator.js.git"
   },
   "bugs": {
     "url": "https://github.com/Theshedman/password-validator.js/issues"
