feat(api): Refactor password validator and add fluent API
Reorganized validator classes and implemented fluent API for password validation. Deleted original validator, updated usages in password manager, and added a new fluent password validator for more readable code. Also modified test cases to accommodate new implementation. Adjusted the export paths in package.json accordingly.

--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -2,9 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "target": "ESNext",
+    "module": "ESNext",
+    "declaration": true,
     "outDir": "dist/esm",
-    "declarationDir": "dist/types",
     "moduleResolution": "Node",
-    "module": "ESNext"
+    "declarationDir": "dist/types"
   }
 }
