fix(size): updated .npmignore file with additional entries to decrease the published package size. This was achieved by deselecting unnecessary files and directories, including IDE files, logs, coverage files, and dependency directories among others. "publishConfig" was also added to package.json file to permit public access.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "policy"
   ],
   "packageManager": "npm@10.2.4",
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Theshedman/password-validator.js.git"
