fix(src): update tsconfig, .gitignore, .npmignore, and package.json files
Add 'rootDir' and 'include' properties in tsconfig.json for better TypeScript compilation. Revamp .gitignore to ignore more unwanted files, especially from IDEs and Node.js. Update .npmignore to exclude unnecessary files from packages. Modify 'main', 'module', 'types' paths in package.json to match new project structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "outDir": "./dist",
+    "rootDir": "./src",
     "sourceMap": false,
     "target": "ESNext",
     "strict": true,
@@ -33,6 +34,9 @@
     "esm": true,
     "experimentalSpecifierResolution": "node"
   },
+  "include": [
+    "src/**/*.ts"
+  ],
   "exclude": [
     "src/test/*",
     "node_modules"
